[gd_scene load_steps=4 format=3 uid="uid://md5yhnf6qccj"]

[ext_resource type="Texture2D" uid="uid://dk8j01pxa0sb" path="res://assets/UI/wood_icon.png" id="1_3p6ho"]
[ext_resource type="Script" uid="uid://dsag0ywvfjeit" path="res://scenes/ui/level_select_section.gd" id="1_wagv1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c166x"]
atlas = ExtResource("1_3p6ho")
region = Rect2(39, 72, 49, 29)

[node name="LevelSelectSection" type="PanelContainer"]
theme_type_variation = &"PanelContainerAlternative"
script = ExtResource("1_wagv1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LevelNumberLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Level 1"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_c166x")

[node name="ResourceCountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "4"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
